--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ h1{
 .categoria-videos {
     display: flex;
     overflow-x: auto;
-    gap: 15px 
+    gap: 15px;
 }
 
 .categoria {
@@ -43,17 +43,29 @@ h1{
 }
 
 .categoria-videos img {
-    opacity: 0.8;
+    opacity: 0.2;
     height: 235px;
 }
 
 .categoria-videos img:hover {
     opacity: 1.5;
-    zoom:  1.25; 
+    zoom:  1.1; 
     display: flex;
     justify-content: center;
     
 }
 h2{
-    color:rgb(0, 255, 34)
+    color:rgb(0, 255, 34);
+    font-size: 30px;
+}
+h3{
+    font-size: 25px;
+    zoom: 1.1;
+}
+.putz1{
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    background: rgba(0, 0, 0, 0.603);
+    margin: auto;
 }
